--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body{
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;;
     margin: 0;
     padding: 0;
     font-size:20px;  
@@ -20,7 +20,7 @@ section{
   background-color: blue;
   border-style: solid;
   border-color: black;  
-  width: 30%;
+  width: 35%;
   text-align: center;
   border-top: 0px;
   border-right: 0px;
